# project-faith

./: Cargo.toml  build.rs
frontend/: ecosystem.config.cjs  package.json  tsconfig.json
frontend/scripts/: protogen.sh
frontend/src/: App.tsx  Game.tsx  cards.ts
frontend/src/api/: auth.ts  card.ts  common.ts  game.ts
frontend/src/assets/: cards.json
proto/: auth.v1.proto  card.v1.proto  game.v1.proto
src/: auth.rs  card.rs  game.rs  main.rs  system.rs  utils.rs
src/game/: action.rs  card.rs  logic.rs  player.rs  room.rs  running.rs  state.rs  user.rs
src/game/card/: prototype.rs
