[package]
name = "project-faith"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
prost = "0.13"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.1"
tonic-web = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.13.1"
