[package]
name = "project-faith"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
atomig = { version = "0.4.3", features = ["derive"] }
base64 = "0.22.1"
downcast-rs = "2.0.1"
futures = "0.3.31"
http = "1.3.1"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
prost = "0.13"
sharded-slab = "0.1.7"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tonic = "0.13.1"
tonic-web = "0.13.1"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.13.1"
